# zentools

./: Cargo.toml  LICENSE  README.md  justfile
docs/: ARCHITECTURE.md  DEPENDENCIES.md  DETECTION.md  MEMORY.md  PMTABLE.md
src/: epp.rs  lib.rs  main.rs
src/cmd/: epp.rs  mem.rs  mod.rs  smu.rs
src/smu/: driver.rs  mem.rs  mod.rs  msr.rs  pmtable.rs  smn.rs  types.rs
zen_epp/: Cargo.toml
zen_epp/src/: lib.rs
zen_smu/: Cargo.toml
zen_smu/src/: lib.rs  types.rs
zentools/: Cargo.toml
zentools/src/: main.rs
