[workspace]
members = ["zen_epp", "zen_smu", "zentools"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Delf <delf@example.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/yourusername/zentools"
keywords = ["amd", "ryzen", "zen", "epp", "smu"]
categories = ["command-line-utilities", "hardware-support"]

[workspace.dependencies]
anyhow = "1.0"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
