[package]
name = "zentools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "zentools"
path = "src/main.rs"

[dependencies]
zen_epp = { path = "../zen_epp" }
zen_smu = { path = "../zen_smu" }
anyhow.workspace = true
clap.workspace = true
comfy-table = "7.1"
